--- a/StudentPortal/src/main/resources/application.properties
+++ b/StudentPortal/src/main/resources/application.properties
@@ -10,4 +10,9 @@ spring.datasource.driver-class = com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=2000
