--- a/StudentPortal/src/main/resources/application.properties
+++ b/StudentPortal/src/main/resources/application.properties
@@ -11,8 +11,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.timeout=2000
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
