--- a/StudentPortal/src/main/resources/application.properties
+++ b/StudentPortal/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+logging.level.root=INFO
+logging.level.com.portal=DEBUG
